# OpenGL-3D-BOX

./: 3DWoodenBox.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  CMakePresets.json  Texture.cpp  Texture.h  config.h  vcpkg.json
Shaders/: default.frag  default.vert
